--- a/examples/bower.json
+++ b/examples/bower.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "aquarelle": "*",
-    "smooth-scroll": "https://github.com/cferdinandi/smooth-scroll.git#^9.1.4"
+    "smooth-scroll": "https://github.com/cferdinandi/smooth-scroll.git#^9.1.4",
+    "vanilla-lazyload": "^1.6.0"
   },
   "ignore": [
     "**/.*",
